<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:background="@drawable/madera"
            android:gravity="center_vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plates"
                android:textSize="50dp"
                android:textStyle="bold"
                android:textColor="@color/customredSJ"
                android:layout_margin="20dp"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/customredSJ"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/arrozjapones"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/rice"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/chicken"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/polloteriyaki"
                    android:layout_marginRight="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ensaladateriyaki"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/salade"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/sushi"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/sushi"
                    android:layout_marginRight="10dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/bento"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/bento"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>